--- a/index.html
+++ b/index.html
@@ -1,74 +1,127 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<meta charset="utf-8">
-	<title>webtest</title>
-	<script type="text/javascript"></script>
-	<style type="text/css">
-		.{
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>测试页面</title>
+	<style>
+		*, *::before, *::after {
 			margin: 0;
 			padding: 0;
+			box-sizing: border-box;
+		}
 
+		:root {
+			--color-primary: #007bff;
+			--color-primary-light: #66b3ff;
+			--color-primary-dark: #0056b3;
+			--color-secondary: #6c757d;
+			--color-success: #28a745;
+			--color-danger: #dc3545;
+			--color-warning: #ffc107;
+			--color-info: #17a2b8;
+			--color-light: #f8f9fa;
+			--color-dark: #343a40;
+			--color-white: #ffffff;
+			--color-black: #000000;
+			--color-gray: #6c757d;
 		}
-		body{
-			background-color: #eee;
+
+		html {
+			font-size: 16px;
 		}
-		h1{
-			font-size: 54px;
-			color: #daa;
+
+		body {
+			font-family: Arial, sans-serif;
+			background-color: var(--color-light);
+			color: var(--color-dark);
+			line-height: 1.6;
+		}
+
+		/* 暗黑模式 */
+		@media (prefers-color-scheme: dark) {
+			body {
+				background-color: var(--color-dark);
+				color: var(--color-light);
+			}
+		}
+
+		a {
+			color: var(--color-primary);
+			text-decoration: none;
+			transition: color 0.3s;
+			cursor: pointer;
+		}
+
+		#app {
+			max-width: 800px;
+			margin: 0 auto;
+			min-height: 100vh;
+		}
+
+		h1 {
 			text-align: center;
-			margin-top: 50px;
-			margin-left: 200px;
-			margin-right: 200px;
-			background-color: #aaa;
-			border-radius: 10px;
+			margin: 20px 0;
 		}
-		.body{
-			background-color: #aaa;
-			margin-left: 200px;
-			margin-right: 200px;
-			min-height: 1080px;
-			border-radius: 10px;
+
+		article {
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			min-height: 100vh;
 			padding: 20px;
 		}
-		.body table{
-			border: 1px solid #fff;
-			font-size: 20px;
-		}
-		th,td{
-			width: 100px;
-			height: 20px;
+
+		.card {
+			width: 100%;
+			background-color: var(--color-white);
+			border-radius: 8px;
+			box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+			margin-bottom: 20px;
 			text-align: center;
+			text-decoration: none;
+			color: var(--color-dark);
+		}
+
+		.card:hover {
+			box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+			transform: translateY(-2px);
+			transition: transform 0.3s, box-shadow 0.3s;
+		}
+
+		.card a {
+			display: block;
+			padding: 20px;
+		}
+
+		.card:hover a {
+			color: var(--color-primary-dark);
 		}
 	</style>
 </head>
 <body>
-	<div class="header">
-		<h1>Webtest</h1>
+	<div id="app">
+		<h1>测试页面</h1>
+		<article id="article"></article>
 	</div>
-	<div class="body">
-		<p>网页测试</p>
-		<table border="1px">
-			<thead>
-				<th>表头</th>
-				<th>biao</th>
-				<th>tou</th>
-			</thead>
-			<tbody>
-				<td>1</td>
-				<td>2</td>
-				<td>3</td>
-			</tbody>
-			<tfoot>
-				<td>zong</td>
-				<td>jie</td>
-				<td>.</td>
-			</tfoot>
-		</table>
-		<form >
-
-		</form>
-	</div>
-		
+	<script>
+		const pages = [
+			{
+				name: '测试1-多标签页 storage 测试',
+				url: './pages/case-001/storage.html'
+			}
+		]
+		const article = document.getElementById('article')
+		for (let i = 0; i < pages.length; i++) {
+			const page = pages[i]
+			const section = document.createElement('section')
+			section.classList.add('card')
+			const a = document.createElement('a')
+			a.href = page.url
+			a.textContent = page.name
+			section.appendChild(a)
+			article.appendChild(section)
+		}
+	</script>
 </body>
 </html>
