chore: 添加案例2-使用 URL Scheme 唤醒应用

--- a/index.html
+++ b/index.html
@@ -109,7 +109,11 @@
 			{
 				name: '测试1-多标签页 storage 测试',
 				url: './pages/case-001/storage.html'
-			}
+			},
+			{
+				name: '测试2-在浏览器中通过 URL scheme 唤醒 APP 或软件',
+				url: './pages/case-002/index.html'
+			},
 		]
 		const article = document.getElementById('article')
 		for (let i = 0; i < pages.length; i++) {
